--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TP-IEM</string>
+    <string name="app_name">Rick and Mortis</string>
 
 
     !-- BOTTOM NAVIGATION VIEW -->
